--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -29,7 +29,7 @@
 			animation-duration: .4s;
 			animation-timing-function: cubic-bezier(0.82, 0, 0.2, 1);
 			animation-fill-mode: forwards;
-			animation-delay: .4s;
+			animation-delay: .5s;
 		}
 	}
 	.visual__mask {
@@ -37,7 +37,7 @@
 		position: relative;
 		height: 100%;
 		animation-name: visual;
-		animation-duration: .4s;
+		animation-duration: 1s;
 		animation-fill-mode: forwards;
 	}
 	.visual__video {
@@ -104,7 +104,7 @@
 	.visual__link--fadein {
 		opacity: 0;
 		animation: visualCont .4s linear forwards;
-		animation-delay: .4s;
+		animation-delay: .5s;
 	}
 	.visual__control {
 		position: absolute;
@@ -147,7 +147,7 @@
 		animation-duration: .4s;
 		animation-timing-function: cubic-bezier(0.82, 0, 0.2, 1);
 		animation-fill-mode: forwards;
-		animation-delay: .4s;
+		animation-delay: .5s;
 	}
 	
 	@include breakpoints.mobile() {
@@ -872,7 +872,6 @@
 	}
 	100% {
 		clip-path: inset(0 round 42px);
-		animation-delay: .2s;
 		animation-timing-function: cubic-bezier(0.82, 0, 0.2, 1);
 	}
 }
