--- a/src/assets/css/_menu.scss
+++ b/src/assets/css/_menu.scss
@@ -22,9 +22,6 @@
 		display: block;
 		height: 100%;
 	}
-	.menu__link--none {
-		pointer-events: none;
-	}
 	.menu__round {
 		position: relative;
 		padding-top: 40.63vw;
@@ -169,19 +166,13 @@
 		z-index: 10;
 		width: 100%;
 		height: 100%;
+		background-color: green;
 		clip-path: inset(0 round 72px);
-		.menu__dimmed {
-			position: absolute;
-			left: 0;
-			top: 0;
-			width: 100%;
-			height: 100%;
-			z-index: 5;
-		}
 		
 		.button {
 			position: static;
 			padding: 0 4px 4px;
+			opacity: 1;
 			.button__item {
 				background-color: #000;
 				color: #fff;
@@ -191,31 +182,6 @@
 	.menu__layer--opened {
 		display: block;
 	}
-	// .menu__buttons {
-	// 	position: absolute;
-	// 	left: 0;
-	// 	width: 100%;
-	// 	bottom: 0;
-	// 	z-index: 5;
-	// 	padding: 0 4px 4px;
-	// 	.menu__button {
-	// 		flex: 1;
-	// 		display: flex;
-	// 		justify-content: center;
-	// 		align-items: center;
-	// 		width: 100%;
-	// 		height: 142px;
-	// 		border-radius: 100vw;
-	// 		background-color: #fff;
-	// 		color: #fff;
-	// 		font-weight: 500;
-	// 		font-size: 36px;
-	// 		letter-spacing: -0.025em;
-	// 		&:not(:first-child) {
-	// 			margin-left: 4px;
-	// 		}
-	// 	}
-	// }
 	.menu__option {
 		display: flex;
 		flex-direction: column;
@@ -450,10 +416,12 @@
 			line-height: 13px;
 		}
 		.menu__event {
+			align-items: flex-start;
 			height: 12px;
 			margin: 2px 3px 0 0;
 			padding: 0 4px 0 3px;
 			font-size: 9px;
+			line-height: 11.5px;
 			& + .menu__discount {
 				margin-left: 0;
 			}
@@ -468,11 +436,8 @@
 			font-size: 11px;
 			line-height: 13px;
 		}
-		.menu__buttons {
-			.menu__button {
-				height: 40px;
-				font-size: 10px;
-			}
+		.menu__layer {
+			clip-path: inset(0 round 26px);
 		}
 		.menu__sizes {
 			margin: -3px 0 auto -3px;
@@ -511,6 +476,16 @@
 			clip-path: inset(0 round 26px 26px 0 0);
 			.marquee__mask {
 				height: 28.5px;
+			}
+		}
+
+		.button {
+			.button__item {
+				height: 40px;
+				font-size: 10px;
+				&:not(:first-child) {
+					margin-left: 2.5px;
+				}
 			}
 		}
 	}
