--- a/src/assets/css/product.scss
+++ b/src/assets/css/product.scss
@@ -164,9 +164,18 @@
     margin-bottom: 20px;
   }
   .rv__figure {
+    position: relative;
     width: 48px;
     height: 48px;
     margin-right: 10px;
+    img {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      @include mixins.translate(-50%, -50%);
+      width: 100%;
+      object-fit: cover;
+    }
   }
   .rv__box {
     width: calc(100% - 148px);
@@ -297,12 +306,16 @@
       padding-right: 0;
       font-size: 16px;
     }
+    .rv__box {
+      width: calc(100% - 110px);
+    }
     .rv__count {
       display: flex;
-      width: 100px;
+      // width: 65px;
+      margin-right: 0;
       font-size: 16px;
-      text-align: right;
       align-items: inherit;
+      justify-content: flex-end;
       .ic_star {
         margin-right: 5px;
       }
@@ -657,7 +670,6 @@
     max-height: inherit;
     overflow: inherit;
     padding: 0;
-    border: 0;
 
     .detail_info--inner {
       display: flex;
@@ -671,17 +683,6 @@
       .product__accordion {order: 6; padding-left: 20px; padding-right: 20px; max-height: inherit; overflow-y: hidden;}
       .product__action {order: 8; padding-left: 20px; padding-right: 20px;}
       .product__option {order: 7}
-    }
-    &:before {
-      content: '';
-      position: absolute;
-      top: 0;
-      display: block;
-      width: 100%;
-      height: 100px;
-      border-top: 1px solid #000000;
-      border-top-left-radius: 40px;
-      border-top-right-radius: 40px;
     }
     .product__action {
       background-color: #5eecfa;
@@ -712,8 +713,10 @@
       }
     }
     .product__accordion {
+      margin-left: -1px;
+      margin-right: -1px;
+      border: 1px solid #000000;
       border-top: 0;
-      border-bottom: 1px solid #000000;
       border-bottom-left-radius: 40px;
       border-bottom-right-radius: 40px;
       padding-bottom: 25px;
@@ -1900,20 +1903,20 @@
     justify-content: center;
   }
 
-  .search {
-    .search__layer {
-      display: none;
-      position: absolute;
-      left: 50%;
-      top: 0;
-      z-index: 5;
-      width: max-content;
-      padding: 36px 30px;
-      background-color: #fff;
-      border: 1px solid #000;
-      border-radius: 42px;
-      @include mixins.translate(-50%, 0);
-    } 
+  
+  .search__layer {
+    display: none;
+    position: absolute;
+    left: 50%;
+    top: 0;
+    z-index: 5;
+    width: max-content;
+    padding: 36px 30px;
+    background-color: #fff;
+    border: 1px solid #000;
+    border-radius: 42px;
+    @include mixins.translate(-50%, 0);
+
     .search__form {
       .btn__close {
         position: absolute;
@@ -1947,12 +1950,12 @@
           padding-right: 40px;
         }
         .search__button {
-					position: absolute;
-					right: 15px;
-					top: 50%;
-					margin-top: -7.5px;
-					@include icons.retina-sprite(icons.$ico-header-search-group);
-				}
+          position: absolute;
+          right: 15px;
+          top: 50%;
+          margin-top: -7.5px;
+          @include icons.retina-sprite(icons.$ico-header-search-group);
+        }
         ::-webkit-input-placeholder {
           font-size: 16px;
         }
@@ -2001,13 +2004,53 @@
       }
     }
     @include breakpoints.mobile() {
-      .search__layer {
-        top: inherit;
-        bottom: 0;
-        width: 100%;
+      position: fixed;
+      top: inherit;
+      bottom: 0;
+      width: 100%;
+      padding: 25px 20px 20px;
+      border-bottom-left-radius: 0;
+      border-bottom-right-radius: 0;
+      .search__form {
+        legend {
+          font-size: 18px;
+          text-align: left;
+        }
+        .btn__close {
+          top: 25px;
+          right: 20px;
+        }
+      }
+      .filter:not(:first-child) {
+        margin-top: 0;
+        .filter__row {
+          display: block;
+          padding-top: 0;
+        }
+        .filter__left {
+          margin-bottom: 10px;
+        }
+        .filter__label {
+          font-weight: 500;
+        }
+        .filter__right {
+          display: block;
+          &::after {
+            content: '';
+            display: block;
+            clear: both;
+          }
+          p {
+            float: left;
+            min-width: auto;
+            width: calc((100% / 4) - 10px);
+            font-size: 12px;
+            margin-right: 10px;
+          }
+        }
       }
     }
-  }
+  } 
 
   @include breakpoints.mobile() {
     margin-top: 50px !important;
