--- a/src/assets/css/product.scss
+++ b/src/assets/css/product.scss
@@ -2206,6 +2206,7 @@
     .suggest__title { 
       font-size: 16px;
       padding-bottom: 15px;
+      padding-left: 10px;
     }
     .menu {
       width: 100%;
