--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -268,7 +268,7 @@
 		height: 100%;
 		z-index: 5;
 		text-align: center;
-		@include mixins.transform(translate3d(0, 0, 1px));
+		@include mixins.transform(translateZ(1px));
 		.best-menu__inner {
 			display: flex;
 			flex-direction: column;
@@ -398,19 +398,31 @@
 		}
 		.cube__face {
 			display: flex;
+			justify-content: center;
 			align-items: center;
 			overflow: hidden;
 			position: absolute;
 			width: 100%;
 			height: 100%;
+			padding: 0 32px;
 			white-space: nowrap;
 			&:nth-child(odd) {
 				background-color: #ffb5d1;
 				color: #fffe72;
+				.cube__text {
+					&:not(:first-child) {
+						margin-left: 109px;
+					}
+				}
 			}
 			&:nth-child(even) {
 				background-color: #5eecfa;
 				color: #fff;
+				.cube__text {
+					&:not(:first-child) {
+						margin-left: 74px;
+					}
+				}
 			}
 		}
 		.cube__face--front {
@@ -426,7 +438,6 @@
 			@include mixins.transform(rotateX(-90deg) translateZ(27px));
 		}
 		.cube__text {
-			margin: 0 50px;
 			font-weight: 600;
 			font-size: 48px;
 			letter-spacing: -0.05em;
@@ -498,7 +509,22 @@
 		.cube {
 			height: 35px;
 			.cube__face {
+				justify-content: flex-start;
 				padding: 0 10px;
+				&:nth-child(odd) {
+					.cube__text {
+						&:not(:first-child) {
+							margin-left: 26.5px;
+						}
+					}
+				}
+				&:nth-child(even) {
+					.cube__text {
+						&:not(:first-child) {
+							margin-left: 26.5px;
+						}
+					}
+				}
 			}
 			.cube__face--front {
 				@include mixins.transform(rotateY(0deg) translateZ(17.5px));
@@ -513,11 +539,7 @@
 				@include mixins.transform(rotateX(-90deg) translateZ(17.5px));
 			}
 			.cube__text {
-				margin: 0;
 				font-size: 24px;
-				&:not(:first-child) {
-					margin-left: 26.5px;
-				}
 			}
 		}
 	}
@@ -525,7 +547,7 @@
 
 .celeb-curation {
 	.celeb-curation__container {
-		padding: 0 32px;
+		padding: 30px 32px 0;
 	}
 	.celeb-curation__screen {
 		position: relative;
@@ -633,7 +655,7 @@
 			height: 60px;
 			margin-top: 0;
 			border: 1px solid #000;
-			border-radius: 1em;
+			border-radius: 100vw;
 			background: none;
 			font-size: 32px;
 			text-transform: uppercase;
