--- a/src/assets/css/cart.scss
+++ b/src/assets/css/cart.scss
@@ -1,23 +1,95 @@
-@use 'mixins';
-@use 'sprite/icons';
-@use 'sprite/mo_icons';
-@use 'breakpoints';
-
+.container {
+  padding-top:0;
+}
 .sub__container {
-  width: 100%;
-
-  @include breakpoints.mobile() {
-    padding-top: 65px;
-  }
-  .inner_wrap {
-    max-width: 1280px;
-    margin: 100px auto 0;
-  }
+width: 100%;
+}
+@media (max-width: 750px) {
+.sub__container {
+  padding-top: 65px;
+}
+}
+.sub__container .inner_wrap {
+max-width: 1310px;
+margin: 100px auto 0;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
-.cart_wrap {
-  .titleArea > h2 {
-    font-size: 60px;
-    font-weight: 500;
-  }
+.xans-order-basketpackage {
+  position: relative;
 }
+.xans-order-basketpackage .ec-base-table.total table {border: 0;}
+
+.cart_wrap .titleArea {
+text-align: left;   
+}
+.cart_wrap .titleArea > h2 {
+font-size: 60px;
+font-weight: 500;
+}
+
+.neworderListArea {
+  width: calc(100% - 370px);
+  border:1px solid #000000;
+  border-radius: 30px;
+  overflow: hidden;
+  padding: 30px;
+}
+.ec-base-table.typeList table {
+  border: 0;
+}
+.ec-base-table thead th {
+  border: 0 !important;
+}
+.ec-base-table.typeList tfoot td {
+  border: 0;
+  background: none !important;
+}
+
+.xans-order-totalsummary {
+  position: absolute;
+  right: 0;
+  top: 60px;
+  width: 360px;
+}
+.area_delv_info {
+  padding: 30px;
+  border:1px solid #000000;
+  border-radius: 30px;
+  overflow: hidden;
+}
+.area_delv_info  .total_order_price_head > dd {
+text-align: right
+}
+.area_delv_info .area_delv_dl {
+  display: flex;
+  justify-content: space-between;
+}
+
+div.ec-base-help.ec-base-help_new > h2,
+div.ec-base-help.ec-base-help_new > h3 {
+  background:none;
+  border: 0;
+}
+div.ec-base-help.ec-base-help_new > h3 {
+ font-size: 24px;   
+}
+div.ec-base-help.ec-base-help_new h4 {
+ font-size: 16px;   
+}
+div.ec-base-help.ec-base-help_new {
+  border-color: #000000;
+  border-radius: 30px;
+  padding: 40px 30px;
+  overflow: hidden;
+}
+div.ec-base-help.ec-base-help_new ol {
+  margin: 15px 0 0 3px;
+}
+div.ec-base-help.ec-base-help_new ol li {
+  background: none;
+  padding: 0;
+  margin-bottom: 5px;
+}
+div.ec-base-help.ec-base-help_new .inner {width: 100%; margin: 0;margin-top: 25px;}
