--- a/src/assets/css/product.scss
+++ b/src/assets/css/product.scss
@@ -675,9 +675,9 @@
       display: flex;
       flex-direction: column;
       padding: 30px 0 0;
-      .product__type {order: 1; padding-left: 20px; padding-right: 20px;}
-      .product__name {order: 2; padding-left: 20px;}
-      .product__price {order: 3; padding-left: 20px; }
+      .product__type {order: 1; padding-left: 20px; padding-right: 20px;margin-bottom: 13px;}
+      .product__name {order: 2; padding-left: 20px; margin-bottom: 0;}
+      .product__price {order: 3; padding-left: 20px; margin-bottom: 10px;}
       .product__tag {order: 4; padding-left: 20px; padding-right: 20px;}
       .product__reivew {order: 5; padding-left: 20px; padding-right: 0;margin-top: 0;}
       .product__accordion {order: 6; padding-left: 20px; padding-right: 20px; max-height: inherit; overflow-y: hidden;}
@@ -768,8 +768,17 @@
     }
     .product__reivew--title {
       .review__count {
+        display: flex;
+        align-items: center;
         .ic_star {
-          // @include mixins.sprite(mo_icons.$ico-star-small);
+          width: 13px;
+          height: 13px;
+          margin-right: 5px;
+          background: {
+            image: url('../images/ico_star_xs.png');
+            size: cover;
+            position: center center;
+          }
         }
       }
     }
@@ -1669,6 +1678,11 @@
     }
     .other__tag {
       font-size: 12px;
+    }
+    .rv__moreinfo {
+      .info_tag {
+        border-radius: 35px;
+      }
     }
   }
 }
