--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -159,13 +159,11 @@
 				font-size: 12px;
 			}
 			.visual__pagination--fadein {
-				animation-duration: .4s;
-				animation-delay: .8s;
+				animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 			}
 		}
 		.visual__mask {
-			animation-duration: .4s .4s;
-			animation-delay: 0s, .6s;
+			animation-duration: .2s .3s;
 		}
 		.visual__video {
 			video {
@@ -176,9 +174,7 @@
 			font-size: 12px;
 		}
 		.visual__theme--fadein {
-			animation-duration: .4s;
 			animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-			animation-delay: .2s;
 		}
 		.visual__title {
 			margin: 20px;
@@ -186,9 +182,7 @@
 			line-height: 54px;
 		}
 		.visual__title--fadein {
-			animation-duration: .4s;
 			animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-			animation-delay: .2s;
 		}
 		.visual__link {
 			width: 92px;
@@ -196,9 +190,7 @@
 			font-size: 19px;
 		}
 		.visual__link--fadein {
-			animation-duration: .4s;
 			animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-			animation-delay: .8s;
 		}
 		.visual__control {
 			left: 0;
@@ -217,9 +209,7 @@
 			}
 		}
 		.visual__control--fadein {
-			animation-duration: .4s;
 			animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-			animation-delay: .8s;
 		}
 	}
 }
@@ -391,7 +381,6 @@
 		font-size: 26px;
 		letter-spacing: -0.04em;
 		text-transform: uppercase;
-		color: #ffffff;
 		&:focus,
 		&:hover {
 			color: #000;
@@ -538,6 +527,7 @@
 		.cube {
 			height: 35px;
 			.cube__face {
+				justify-content: center;
 				padding: 0 10px;
 				&:nth-child(odd) {
 					.cube__text {
@@ -870,14 +860,14 @@
 	}
 	.menu__category--top {
 		background-image: url('../images/bg_menu_category_top.png');
-		background-position: 50% 4.06vw;
+		background-position: 50% 4.11vw;
 		background-size: 88.49vw auto;
 		background-color: #fffd72;
 	}
 	.menu__category--acc {
 		background-image: url('../images/bg_menu_category_acc.png');
 		background-position: 50% 50%;
-		background-size: 46.25vw auto;
+		background-size: 45.89vw auto;
 		background-color: #ffb5d1;
 	}
 
