--- a/src/assets/css/archive.scss
+++ b/src/assets/css/archive.scss
@@ -59,3 +59,98 @@
 		}
 	}
 }
+
+.archive-detail {
+	padding-top: 0;
+	.archive-detail__container {
+		position: relative;
+		padding-bottom: 54px;
+	}
+	.archive-detail__info {
+		align-items: center;
+		justify-content: space-between;
+		align-items: center;
+		position: fixed;
+		display: flex;
+		left: 0;
+		bottom: 0;
+		z-index: 5;
+		width: 100%;
+		height: 54px;
+		padding: 0 32px;
+		background-color: #fff;
+		font-size: 18px;
+	}
+	.archive-detail__info--absoluted {
+		position: absolute;
+	}
+	.archive-detail__name {
+		line-height: 36px;
+	}
+	.archive-detail__link {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		height: 32px;
+		padding: 0 16px;
+		border: 1px solid #000;
+		border-radius: 100vw;
+		font-weight: 500;
+		letter-spacing: -0.04em;
+		&:hover {
+			background-color: #000;
+			color: #fff;
+		}
+	}
+
+	.menu {
+		.menu__list {
+			margin: -4px 0 0 -4px;
+		}
+		.menu__item {
+			width: calc(50% - 4px);
+			margin: 4px 0 0 4px;
+		}
+		.menu__round {
+			padding-top: calc(56.25vw - 54px);
+			clip-path: inset(0 round 36px);
+		}
+	}
+
+	@include breakpoints.mobile() {
+		padding-top: 60px;
+		.archive-detail__container {
+			padding-bottom: 63px;
+		}
+		.archive-detail__info {
+			height: 63px;
+			padding: 0 15px;
+			font-size: 12px;
+		}
+		.archive-detail__name {
+			margin-right: 20px;
+			font-weight: 600;
+			line-height: 16px;
+			@include mixins.ellipse(2);
+		}
+		.archive-detail__link {
+			height: 34px;
+			padding: 0 13px;
+			letter-spacing: -0.02em;
+		}
+
+		.menu {
+			.menu__list {
+				margin: -2px 0 0 0;
+			}
+			.menu__item {
+				width: 100%;
+				margin: 2px 0 0 0;
+			}
+			.menu__round {
+				padding-top: 144vw;
+				clip-path: inset(0 round 26px);
+			}
+		}
+	}
+}
